--- a/admin/style.css
+++ b/admin/style.css
@@ -1,2 +1,34 @@
 
 [v-cloak] {display: none}
+
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+.slider-image-active{
+    opacity:0.7;
+    border:solid 2px darkblue;
+}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+    }
+}
+.cursor-pointer{
+    cursor:pointer;
+}
