--- a/css/style.css
+++ b/css/style.css
@@ -7,40 +7,39 @@ html {
      overflow: scroll;
 }
 body{
-    background-color: #aaaaaa;
     margin:0 auto;
     width:100%; 
-    background-repeat:no-repeat;
     height:auto;
     font: 12px normal Verdana, Arial, Helvetica, sans-serif;
     font-family:"Cambria"; 
     color: #333333;
+    /*
     -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
+   */
+    background:url(../img/bg1.jpg);
+    background-size:100% 100%;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-color:#959394;
 }
 #bg{
-    position:absolute;
+    position:fixed;
     left:0px;
     right:0px;
     top:0px;
     bottom:0px;
-    background:url(../img/bg1.jpg);
-    background-size:100% 100%; 
-    z-index: -1;   
+    background:url(../img/bg_mask.png);
 }
-#bg>div{
-    width:100%;
-    height:100%;
-    background:url(../img/bg_mask.png);        
-}
+
 a{
     text-decoration:none;
     color:inherit;  
 }
-body>div:nth-child(2){
+#mainApp{
     width:830px;
     height:auto;
     border:none 1px #ffffff;
@@ -81,13 +80,15 @@ body>div:nth-child(2){
     -webkit-box-shadow:  0px 3px 5px 1px rgba(0,0,0,0.2);
     box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.2);
     overflow: hidden;
-    height:503px;
+    /*height:503px;*/
 }
-.active_content{
-    position: absolute;
+.content-block{
+    position: relative;
+    float:left;
     border:none 1px #000;
     width:100%;
     height:auto;
+    opacity: 0;
 }
 
 #main_menu{
@@ -128,11 +129,13 @@ body>div:nth-child(2){
     float:left;
     background:#333333;
     width:100%;
-    height:120px;
+    height:auto;
     margin-top:16px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 #footer>p:first-child{
-    margin-top: 18px;
+
 }
 #footer>p{
     margin:0;
@@ -145,75 +148,77 @@ body>div:nth-child(2){
     line-height: 12px;
     letter-spacing: 0.05em;
 }
+
+.article-description{
+    width:auto;
+    margin-left:18px;
+    margin-right:18px;
+}
 /*********************** intro *************************/
 #intro{
     float:left;
     border:none 1px #000;
     width:100%;
-    height:280px;    
 }
-#intro>div:nth-child(1){
-   position:absolute;
-   top:18px;
-   left:18px;
-   width:520px;
-   height:250px;
-   background-color:#ffffff; 
-   overflow:hidden;  
-   
-   border:none 0px #000;    
+
+.intro-text-block{
+    float:left;
+    width:262px;
+    border:none 1px #000;
+    margin-left:15px;
 }
-#intro>div:nth-child(2){
+.intro-title{
    font-family:"Cambria";    
    border:none 1px #000;
-   position:absolute;
-   top:15px;
-   right:15px;
-   width:262px;
-   height:60px;
+   width:auto;
    font-size:24px;
    line-height:20px;
    letter-spacing:1px;
 }
-#intro>div:nth-child(3){
+.intro-description{
    font-family:"Cambria";
    text-align:left;
    border:none 1px #000;
-   position:absolute;
-   top:85px;
-   right:15px;
-   width:262px;
-   height:140px;
+   width:auto;
    font-size:14px;
    line-height:14px;
    overflow:hidden;
-   letter-spacing:0.1em;   
+   letter-spacing:0.1em;
 }
 /********************* slider ***************************/
-#slide_container{
-   margin-left:-520px;
-   width:1560px;
-   height:100%;
-   border:none 0px #000;     
-}
-#slide_container_move{
-   margin-left:520px;
-   width:1040px;
-   height:100%;
-   border:none 0px #000;  
-   position:relative;
-   z-index:0;   
-}
-#slide_container_move>img{
-    position:absolute;
+.intro-slider{
+    float:left;
+    margin-left: 18px;
     width:520px;
-    cursor:pointer; 
+    height:250px;
+    border:none 1px #000;
 }
-#slide_container_move>img:nth-child(2){
-    margin-left:520px;
+.article-slider{
+    width:auto;
+    margin-left: 18px;
+    margin-right: 18px;
+    border:none 1px #000;
+    height:400px;
+}
+.slider{
+    position:relative;
+    width:100%;
+    height:100%;
+    border:none 0px #000;
+    overflow:hidden;
+    background-color:#ffffff;
+}
+.slide-container{
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
+.slide-container>img{
+    width:100%;
+    height:100%;
 }
 
-.dark_image_title{
+.slider-title{
     font-family:"Cambria";
     position:absolute;
     width:auto;
@@ -290,56 +295,38 @@ ul.dots>li.r:hover{
     margin-left:2px;          
 }
 /********************** icons **************************/
-div.icon_wrap{
+div.icons{
     float:left;
-    height:173px;
+    height:auto;
     border:none 1px #000;
     width:100%;
 }
-div.icons{
+.content-block-wide{
     position:relative;
-     float:left;
+    float:left;
     border:none 1px #000;
     width:100%;
     height:auto;   
-    padding-top: 0px;  
-    cursor:pointer;      
-}
-div.icons>div:nth-child(1){
- /*   position:absolute;
-    top:0px;
-    left:18px;
-    right:18px;    
-    border:dotted 1px #000; 
-    height:15px;
-    background: url(../img/header_line.png) repeat-x 0 4px;   
-    */    
-}
-div.hline{
-    float:left;
-    width:795px;
-    border:none 1px #000; 
-    height:15px;
-    margin-left:18px;
-    margin-bottom:10px;    
-    background: url(../img/header_line.png) repeat-x 0 4px;           
-}
-div.hline>a:nth-child(1){
-    background:#ffffff;
-    line-height:15px;
-    margin-left:20px;
-    padding-left:7px;
-    padding-right:7px;       
-}
-div.icons>div:nth-child(1)>a{
-    background:#ffffff;
-    line-height:15px;
-    margin-left:20px;
-    padding-left:7px;
-    padding-right:7px;   
 }
 
-div.image_icon_container{
+.header-line{
+    width: auto;
+    border:none 1px #000;
+    height:15px;
+    margin-left:18px;
+    margin-right:18px;
+    background: url(../img/header_line.png) repeat-x 0 4px;           
+}
+.header-line>.header{
+    background:#ffffff;
+    line-height:15px;
+    margin-left:20px;
+    padding-left:7px;
+    padding-right:7px;
+    display: inline;
+}
+
+div.icon-container{
     position:relative;
     float:left;
     width:182px;
@@ -350,12 +337,11 @@ div.image_icon_container{
     border:none 1px #000;
     text-align:center;  
 }
-div.image_icon_container>div:nth-child(1){
+div.icon-container>img{
     width:182px;
     height:124px;
-    background:#ffffff;       
 }
-div.image_icon_container>p:nth-child(2){
+div.icon-container>p{
     padding:0px;
     margin:0px;
     display:block;
@@ -365,57 +351,7 @@ div.image_icon_container>p:nth-child(2){
     border:none 1px #000; 
     width:182px;
 }
-div.image_icon_container>p:nth-child(2):hover{
-    color:#6A7D87;
-}
-div.image_icon_container>p:nth-child(3){
-    padding:0px;
-    margin:0px;
-    display:block;
-    position:absolute;
-    top:151px;
-    border:none 1px #000; 
-    width:182px;
-}
-div.image_icon_container_overlay{
-    box-sizing:border-box;
-    background:rgba(27,27,27,0.60);
-    position:absolute;
-    width:182px;
-    height:124px;
-    top:0px;
-    left:0px;
-    border: solid 4px #1b1b1b;
-    overflow:hidden;
-    box-shadow:inset 0 0 15px #1b1b1b;
-    
-}
-div.image_icon_container_overlay>p:nth-child(1){
-    top:17px;
-    display:block;
-    margin:0;
-    padding:0;
-    position:absolute;
-    width:182px;
-    height:29px;
-    line-height:29px;
-    font-size:13px;
-    background:#1b1b1b;
-    color:#c6c6c6;
-}
-div.image_icon_container_overlay>p:nth-child(1):hover{
-    color:#FFFFFF;
-    text-shadow:0px 2px 2px rgba(0, 0, 0, 1);    
-}
-div.image_icon_container_overlay>img:nth-child(2){
-    top:57px;
-    left:50%;
-    margin-left:-17px;
-    display:block;
-    position:absolute;
-    width:34px;
-    height:33px;
-}
+
 /********************************** item ********************************/
 div.item_container{
     float:left;
@@ -441,7 +377,6 @@ div.item_container>div:nth-child(2){
     margin-top:10px;
     margin-bottom:10px;    
     text-align:left;
-    
    font-family:"Cambria";    
 
    font-size:13px;
@@ -450,10 +385,48 @@ div.item_container>div:nth-child(2){
    letter-spacing:0.1em;    
 }
 
-.fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
+.cursor-pointer{
+    cursor:pointer;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-    opacity: 0;
+.mt-18{
+    margin-top: 18px;
+}
+.mt-10{
+    margin-top: 10px;
+}
+.mb-10{
+    margin-bottom: 10px;
+}
+.link-button{
+    color:#000;
+    cursor:pointer;
+}
+.link-button:hover{
+    color:#6A7D87;
+}
 
+@media only screen and (min-width: 200px) {
+    #mainApp{
+        width:425px;
+    }
+    .intro-text-block{
+        display: none;
+    }
+    .intro-slider{
+        width:385px;
+        height:250px;
+    }
+}
+
+@media only screen and (min-width: 880px) {
+    #mainApp{
+        width:830px;
+    }
+    .intro-text-block{
+        display: block;
+    }
+    .intro-slider{
+        width:520px;
+        height:250px;
+    }
 }
