--- a/admin/style.css
+++ b/admin/style.css
@@ -9,7 +9,9 @@
 
 .slider-image-active{
     opacity:0.7;
-    border:solid 2px darkblue;
+}
+.slider-image-active img {
+
 }
 
 @media (min-width: 768px) {
