--- a/admin/style.css
+++ b/admin/style.css
@@ -34,3 +34,34 @@
 .cursor-pointer{
     cursor:pointer;
 }
+
+
+#bg1{
+    position:fixed;
+    left:0px;
+    right:0px;
+    top:0px;
+    bottom:0px;
+    background:url(../img/bg1.jpg);
+    background-repeat:no-repeat;
+
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    z-index: -10;
+}
+#bg{
+    position:fixed;
+    left:0px;
+    right:0px;
+    top:0px;
+    bottom:0px;
+    background:url(../img/bg_mask.png);
+    z-index: -9;
+}
