--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,6 @@ body{
     font: 12px normal Verdana, Arial, Helvetica, sans-serif;
     font-family:"Cambria"; 
     color: #333333;
-    /*
-    -webkit-user-select: none;
-   -khtml-user-select: none;
-   -moz-user-select: none;
-   -o-user-select: none;
-   user-select: none;
-
-    background:url(../img/bg1.jpg);
-    background-size:100% 100%;
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    background-color:#959394;
-    */
 }
 
 #bg1{
@@ -155,8 +142,7 @@ a{
     height:auto;
     margin-top:16px;
     padding-top: 18px;
-    padding-bottom: 18px;
-
+    padding-bottom: 9px;
     mix-blend-mode: darken;
 }
 #footer>p:first-child{
@@ -164,16 +150,23 @@ a{
 }
 #footer>p{
     margin:0;
-    margin-bottom:7px;
+    margin-bottom:9px;
     margin-left:18px;
     color:gray;
     font-family: "Cambria";
     text-align: left;
     font-size: 14px;
-    line-height: 12px;
+    line-height: 14px;
     letter-spacing: 0.05em;
-
-    color:lightgray;
+    display: flex;
+    align-items:center;
+    color:#D3D3D3;
+}
+.footerIcon{
+    width:14px;
+    height:14px;
+    line-height: 14px;
+    margin-right: 10px;
 }
 
 .article-description{
@@ -227,7 +220,6 @@ a{
     margin-left: 18px;
     margin-right: 18px;
     border:none 1px #000;
-    height:400px;
 }
 .slider{
     position:relative;
@@ -357,7 +349,7 @@ div.icons{
     letter-spacing: 0.05em;
 }
 
-div.icon-container{
+.icon-container{
     position:relative;
     float:left;
     width:182px;
@@ -368,7 +360,11 @@ div.icon-container{
     border:none 1px #000;
     text-align:center;  
 }
-div.icon-container>img{
+.icon-image-wrap{
+    width:182px;
+    height:124px;
+}
+.icon-image-wrap>img{
     width:182px;
     height:124px;
 }
@@ -437,6 +433,25 @@ div.item_container>div:nth-child(2){
     color:#6A7D87;
 }
 
+.preload-image{
+    width:100%;
+    height: 100%;
+    background: rgb(124,124,124);
+    background: linear-gradient(180deg, rgba(124,124,124,1) 0%, rgba(255,255,255,0) 100%);
+}
+.preload-image>img{
+    opacity:0;
+}
+.preload-image>img.loaded{
+    opacity:1;
+    -webkit-transition:opacity 1s ease-in;
+    -moz-transition:opacity 1s ease-in;
+    -o-transition:opacity 1s ease-in;
+    transition:opacity 1s ease-in;
+}
+
+[v-cloak] { display:none; }
+
 @media only screen and (min-width: 200px) {
     #mainApp{
         width:425px;
@@ -446,7 +461,11 @@ div.item_container>div:nth-child(2){
     }
     .intro-slider{
         width:385px;
-        height:250px;
+        height:216px;
+    }
+    .article-slider{
+        width:385px;
+        height:216px;
     }
 }
 
@@ -459,6 +478,10 @@ div.item_container>div:nth-child(2){
     }
     .intro-slider{
         width:520px;
-        height:250px;
+        height:292px;
+    }
+    .article-slider{
+        width:794px;
+        height:446px;
     }
 }
