--- a/css/style.css
+++ b/css/style.css
@@ -233,10 +233,7 @@ a{
     width:100%;
     height:100%;
     overflow:hidden;
-}
-.slide-container>img{
-    width:100%;
-    height:100%;
+    position:relative;
 }
 
 .slider-title{
@@ -363,6 +360,7 @@ div.icons{
 .icon-image-wrap{
     width:182px;
     height:124px;
+    position:relative;
 }
 .icon-image-wrap>img{
     width:182px;
@@ -438,9 +436,11 @@ div.item_container>div:nth-child(2){
     height: 100%;
     background: rgb(124,124,124);
     background: linear-gradient(180deg, rgba(124,124,124,1) 0%, rgba(255,255,255,0) 100%);
+    position:absolute;
 }
 .preload-image>img{
     opacity:0;
+    width:100%;
 }
 .preload-image>img.loaded{
     opacity:1;
