--- a/admin/style.css
+++ b/admin/style.css
@@ -65,3 +65,17 @@
     background:url(../img/bg_mask.png);
     z-index: -9;
 }
+
+#login .container #login-row #login-column #login-box {
+    margin-top: 80px;
+    max-width: 600px;
+    height: 380px;
+    border: 1px solid #9C9C9C;
+    background-color: #EAEAEA;
+}
+#login .container #login-row #login-column #login-box #login-form {
+    padding: 20px;
+}
+#login .container #login-row #login-column #login-box #login-form #register-link {
+    margin-top: -85px;
+}
